--- a/src/content/blog/about.mdx
+++ b/src/content/blog/about.mdx
@@ -4,8 +4,11 @@ title: 'About This Blog'
 description: 'Learn more about the purpose and mission of our blog.'
 category: 'Product'
 publishedAt: '2024-02-10'
-author: 'Omkar Oza'
+author:
+  name: 'Omkar Oza'
+  picture: 'https://avatars.githubusercontent.com/u/121926499?v=4'
 image: 'https://images.unsplash.com/photo-1660746496627-ab36048cd78e?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'
+readTime: '5 min'
 ---
 
 # About Us
