--- a/src/content/blog/welcome.mdx
+++ b/src/content/blog/welcome.mdx
@@ -4,8 +4,11 @@ title: 'Welcome to the Blog'
 description: 'An introduction to our blog where we share the latest updates and stories.'
 category: 'Design'
 publishedAt: '2024-01-15'
-author: 'Smit Patel'
+author:
+  name: 'Smit Patel'
+  picture: 'https://avatars.githubusercontent.com/u/61959920?v=4'
 image: 'https://images.unsplash.com/photo-1616304389380-e2242ea55de7?q=80&w=1709&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'
+readTime: '3 min'
 ---
 
 # 👋 Welcome to Your Project!
