feat(blog): added TOC for blog and Related blog section

--- a/src/content/blog/welcome.mdx
+++ b/src/content/blog/welcome.mdx
@@ -15,6 +15,12 @@ readTime: '3 min'
 
 This is your **Next.js** project powered by **MDX** and **shadcn/ui**.
 
+## Level 1 : H2
+
+### Level 2 : H3
+
+#### Level 3 : H4
+
 ## Get Started
 
 1. Edit this file at `src/content/welcome.mdx` to customize your welcome page.
